Release 4.0 bug fixes (#6911)
* PLT-7098 - Back arrow cut off in sidebar

* PLT-7089 - Fixing channel name truncation

--- a/webapp/sass/layout/_headers.scss
+++ b/webapp/sass/layout/_headers.scss
@@ -128,15 +128,15 @@
         white-space: nowrap;
 
         .move--left & {
-            max-width: calc(100vw - 830px);
+            max-width: calc(100vw - 850px);
 
             .multi-teams & {
-                max-width: calc(100vw - 880px);
+                max-width: calc(100vw - 905px);
             }
         }
 
         .multi-teams & {
-            max-width: calc(100vw - 830px);
+            max-width: calc(100vw - 850px);
         }
     }
 
